--- a/Controls/Certificate.xaml
+++ b/Controls/Certificate.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PriyemnayaKomissiya.Controls"
              mc:Ignorable="d" 
-             d:DesignHeight="670" d:DesignWidth="800" Background="#FFF3F4F8">
+             Height="670" d:DesignWidth="800" Background="#FFF3F4F8">
     <StackPanel Visibility="Visible" Tag="VisibleField" Height="605" Margin="20,0">
         <Grid MinHeight="30" Height="29">
             <Grid.ColumnDefinitions>
@@ -17,7 +17,7 @@
         </Grid>
         <Line X1="0" Y1="0" X2="2000" Y2="0" Height="10" Stroke="{StaticResource 94A1BB}"/>
         <TextBlock Text="НОМЕР И СЕРИЯ ДОКУМЕНТА" Width="469"/>
-        <TextBox x:Name="tbSeries" Style="{DynamicResource TextBox}" TextChanged="ClearError"  Width="502"/>
+        <TextBox x:Name="tbSeries" Style="{DynamicResource tbAtestatSeries}" TextChanged="ClearError"  Width="502"/>
         <Grid x:Name="grMarks" Margin="0,10,0,0" Height="400" Width="504">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="168*"/>
