--- a/Controls/ContactData.xaml
+++ b/Controls/ContactData.xaml
@@ -6,8 +6,8 @@
              xmlns:local="clr-namespace:PriyemnayaKomissiya.Controls"
              xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
              mc:Ignorable="d" 
-             d:DesignHeight="270" d:DesignWidth="800">
-    <StackPanel Tag="VisibleField" Height="270" Background="#FFF3F4F8">
+             Height="270" d:DesignWidth="800">
+    <StackPanel x:Name="spMain" Height="270" Background="#FFF3F4F8">
         <Grid MinHeight="30" Height="29">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
