--- a/View/MainWorkingWindow.xaml
+++ b/View/MainWorkingWindow.xaml
@@ -69,18 +69,11 @@
                 <Grid x:Name="grdAdmissionPlans" Grid.Column="2" RenderTransformOrigin="0.5,0.5">
                     <Grid.RowDefinitions>
                         <RowDefinition Height="10"/>
-                        <RowDefinition Height="240"/>
-                        <RowDefinition Height="240"/>
-                        <RowDefinition Height="240"/>
-                        <RowDefinition Height="240"/>
-                        <RowDefinition Height="240"/>
+                        <RowDefinition x:Name="rowButtonsize" Height="240"/>
                     </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="40"/>
-                        <ColumnDefinition Width="382*" MinWidth="340" MaxWidth="420"/>
-                        <ColumnDefinition Width="382*" MinWidth="340" MaxWidth="420"/>
-                        <ColumnDefinition Width="382*" MinWidth="340" MaxWidth="420"/>
-                        <ColumnDefinition Width="382*" MinWidth="340" MaxWidth="420"/>
+                        <ColumnDefinition x:Name="colButtonsize" Width="340"/>
                     </Grid.ColumnDefinitions>
                 </Grid>
             </ScrollViewer>
@@ -184,7 +177,7 @@
                 <RowDefinition Height="95"/>
                 <RowDefinition/>
             </Grid.RowDefinitions>
-            <Border CornerRadius="10" Background="#FF1A95B0" Margin="98,22,89,22">
+            <Border CornerRadius="10" Background="#FF1A95B0" Margin="80,22,53,22">
                 <Grid Grid.RowSpan="2" Grid.ColumnSpan="2">
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition/>
@@ -225,7 +218,7 @@
                         <ColumnDefinition Width="688*"/>
                         <ColumnDefinition Width="42*"/>
                     </Grid.ColumnDefinitions>
-                    <StackPanel Grid.Column="1" Margin="0,1,20,5" Grid.Row="1" MinHeight="150">
+                    <StackPanel Grid.Column="1" Margin="0,1,0,0" Grid.Row="1" MinHeight="150">
                         <TextBlock Text="ОСНОВНЫЕ ДАННЫЕ" Style="{DynamicResource TextBlockzagolovok}" Margin="10,10,10,4" Height="16"/>
                         <Line X1="0" Y1="0" X2="617" Y2="0" Stroke="{StaticResource 94A1BB}" Height="13"/>
                         <TextBlock Style="{DynamicResource TextBlock1}" Height="24" Margin="10,0,0,0" ><Run Text="Школа: " FontWeight="Bold"/><InlineUIContainer>
@@ -244,7 +237,7 @@
                             <TextBlock x:Name="infoStati" Text="" Style="{DynamicResource TextBlock2}" Height="19" Width="524"/>
                         </InlineUIContainer></TextBlock>
                     </StackPanel>
-                    <Grid Grid.Column="2" Margin="0,1,20,8" Grid.Row="1" MinHeight="150">
+                    <Grid Grid.Column="2" Margin="0,1,0,0" Grid.Row="1" MinHeight="150">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="690"/>
                         </Grid.ColumnDefinitions>
@@ -449,16 +442,21 @@
         </Grid>
         <!--#endregion-->
         <!--#region форма добавления/редактирования записей-->
-                <Grid Visibility="Hidden" x:Name="addEditForm" Grid.ColumnSpan="2" Margin="0,32,0,0" Grid.Row="2" Background="#FFF3F4F8" >
+                <Grid Visibility="Hidden" x:Name="addEditForm" Grid.ColumnSpan="2" Grid.Row="2" Background="#FFF3F4F8" >
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="30"/>
+                        <RowDefinition Height="1541*"/>
+                    </Grid.RowDefinitions>
                     <Grid.ColumnDefinitions>
                         <ColumnDefinition Width="93"/>
-                        <ColumnDefinition Width="141*"/>
-                        <ColumnDefinition Width="30*"/>
-                        <ColumnDefinition Width="1154*"/>
+                        <ColumnDefinition Width="107*"/>
+                        <ColumnDefinition Width="23*"/>
+                        <ColumnDefinition Width="852*"/>
+                        <ColumnDefinition Width="30"/>
                         <ColumnDefinition Width="12"/>
                     </Grid.ColumnDefinitions>
-                    <Image Source="/PriyemnayaKomissiya;component/Resources/Layer 3.png" MouseUp="Image_MouseUp_3" Margin="53,10,10,0" Height="30" VerticalAlignment="Top"/>
-                    <TabControl Name="TabControlAddEditForm" BorderThickness="0" TabStripPlacement="Left" Background="{x:Null}" Grid.ColumnSpan="4" Margin="0,0,-0.491,0" Grid.Column="1" SelectionChanged="TabControlAddEditForm_SelectionChanged">
+                    <Image Source="/PriyemnayaKomissiya;component/Resources/Layer 3.png" MouseUp="Image_MouseUp_3" Height="30" VerticalAlignment="Top" Grid.Column="4"/>
+                    <TabControl Name="TabControlAddEditForm" BorderThickness="0" TabStripPlacement="Left" Background="{x:Null}" Grid.ColumnSpan="5" Grid.Column="1" SelectionChanged="TabControlAddEditForm_SelectionChanged" Grid.Row="1">
                         <TabItem Header="ОСНОВНОЕ" local:TabItemThemeProperties.Description="Основные данные об абитуриенте" local:TabItemThemeProperties.Number="1" Style="{DynamicResource TabItemAdd}" Padding="8,2,6,2" VerticalContentAlignment="Top" Margin="0,10,0,-10">
                             <Grid Margin="-1,0,0,0">
                             <ScrollViewer Name="ScrollAddMain" Foreground="{StaticResource font}" FontWeight="Normal" FontSize="14" FontFamily="{StaticResource Montserrat-Regular}" Margin="10">
@@ -476,7 +474,7 @@
                                         </StackPanel>
                                     </StackPanel>
                                     <TextBlock Text="ОБРАЗОВАНИЕ" Margin="10,25,0,10"/>
-                                    <ComboBox SelectedIndex="0" x:Name="addEditFormobrazovanie" Style="{DynamicResource ComboBoxFlatStyle}" />
+                                    <ComboBox SelectedIndex="0" x:Name="addEditFormobrazovanie" Style="{DynamicResource ComboBoxFlatStyle}"/>
                                     <TextBlock Text="НОМЕР ЭКЗАМЕНАЦИОННОГО ЛИСТА" Margin="10,25,0,10"/>
                                     <TextBox x:Name="addEditFormExamList" Style="{DynamicResource TextBox}" TextChanged="ClearError"/>
                                     <TextBlock Text="ФАМИЛИЯ" Margin="10,25,0,10"/>
