--- a/View/MainWorkingWindow.xaml
+++ b/View/MainWorkingWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:local="clr-namespace:PriyemnayaKomissiya"
         xmlns:uc="clr-namespace:PriyemnayaKomissiya.Controls"
         mc:Ignorable="d"
-        Title="Приемная комиссия «Полоцкий государственный экономический колледж»" Height="1792" Width="1122"
+        Title="Приемная комиссия УО«Полоцкий государственный экономический колледж»" Height="1792" Width="1122"
         x:Name="MainWorkingWindowForm" Loaded="MainWorkingWindow_Loaded" Background="#FFF6F7FA" SizeChanged="MainWorkingWindowForm_SizeChanged" Closed="MainWorkingWindowForm_Closed" Icon="/PriyemnayaKomissiya;component/Resources/ico.ico" MinWidth="800" MinHeight="600" WindowStartupLocation="CenterScreen">
     <Grid Background="#0894A1BB">
         <Grid.RowDefinitions>
@@ -185,8 +185,8 @@
                     </Grid.ColumnDefinitions>
                     <StackPanel Orientation="Horizontal">
                         <TextBlock x:Name="InfoFIO" Text="Andrey" Margin="15,10,15,0" FontSize="24" FontFamily="{StaticResource Montserrat-SemyBold}"  Foreground="White" VerticalAlignment="Top" Height="37"/>
-                        <Border Background="#4CFFFFFF" Margin="10" CornerRadius="15" Width="120">
-                            <TextBlock x:Name="InfoShow_Status" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Принято" Margin="0,4" Width="120" TextAlignment="Center" Foreground="White" FontSize="16" Height="23" />
+                        <Border Background="#4CFFFFFF" Margin="10" CornerRadius="15" Width="auto">
+                            <TextBlock x:Name="InfoShow_Status" HorizontalAlignment="Center" VerticalAlignment="Center" Text="Зачислен" Margin="20,4" Width="auto" TextAlignment="Center" Foreground="White" FontSize="16" Height="23" />
                         </Border>
                     </StackPanel>
                     <Image Source="/PriyemnayaKomissiya;component/Resources/Layer 2.png" Margin="25,0,103,0" Width="23" Grid.Column="1" MouseLeftButtonDown="Image_BackToAbiturients"/>
